--- a/homework/2020-11-07/styles/main.css
+++ b/homework/2020-11-07/styles/main.css
@@ -1,3 +1,12 @@
+@-webkit-keyframes step11 {
+  0% {
+    top: 362px;
+  }
+  100% {
+    top: 167px;
+    height: 52px;
+  }
+}
 
 @keyframes step11 {
   0% {
@@ -8,15 +17,37 @@
     height: 52px;
   }
 }
+
+@-webkit-keyframes step21 {
+  0% {
+    top: 380px;
+  }
+  100% {
+    top: 140px;
+    height: 79px;
+  }
+}
+
 @keyframes step21 {
   0% {
     top: 380px;
   }
   100% {
     top: 140px;
-    height: 79px;;
+    height: 79px;
   }
 }
+
+@-webkit-keyframes step31 {
+  0% {
+    top: 410px;
+  }
+  100% {
+    top: 108px;
+    height: 111px;
+  }
+}
+
 @keyframes step31 {
   0% {
     top: 410px;
@@ -26,6 +57,17 @@
     height: 111px;
   }
 }
+
+@-webkit-keyframes step41 {
+  0% {
+    top: 442px;
+  }
+  100% {
+    top: 76px;
+    height: 143px;
+  }
+}
+
 @keyframes step41 {
   0% {
     top: 442px;
@@ -35,6 +77,17 @@
     height: 143px;
   }
 }
+
+@-webkit-keyframes step51 {
+  0% {
+    top: 470px;
+  }
+  100% {
+    top: 58px;
+    height: 160px;
+  }
+}
+
 @keyframes step51 {
   0% {
     top: 470px;
@@ -44,6 +97,17 @@
     height: 160px;
   }
 }
+
+@-webkit-keyframes step1 {
+  0% {
+    top: 167px;
+  }
+  100% {
+    top: 362px;
+    height: 160px;
+  }
+}
+
 @keyframes step1 {
   0% {
     top: 167px;
@@ -53,15 +117,37 @@
     height: 160px;
   }
 }
+
+@-webkit-keyframes step2 {
+  0% {
+    top: 140px;
+  }
+  100% {
+    top: 380px;
+    height: 143px;
+  }
+}
+
 @keyframes step2 {
   0% {
     top: 140px;
   }
   100% {
     top: 380px;
-    height: 143px;;
+    height: 143px;
   }
 }
+
+@-webkit-keyframes step3 {
+  0% {
+    top: 108px;
+  }
+  100% {
+    top: 410px;
+    height: 111px;
+  }
+}
+
 @keyframes step3 {
   0% {
     top: 108px;
@@ -71,6 +157,17 @@
     height: 111px;
   }
 }
+
+@-webkit-keyframes step4 {
+  0% {
+    top: 76px;
+  }
+  100% {
+    top: 442px;
+    height: 79px;
+  }
+}
+
 @keyframes step4 {
   0% {
     top: 76px;
@@ -80,6 +177,17 @@
     height: 79px;
   }
 }
+
+@-webkit-keyframes step5 {
+  0% {
+    top: 58px;
+  }
+  100% {
+    top: 470px;
+    height: 52px;
+  }
+}
+
 @keyframes step5 {
   0% {
     top: 58px;
@@ -89,7 +197,8 @@
     height: 52px;
   }
 }
-@keyframes ball {
+
+@-webkit-keyframes ball {
   0% {
     left: 100px;
     top: 50px;
@@ -102,7 +211,7 @@
     height: 50px;
     width: 63px;
   }
-  10% {  
+  10% {
     left: 180px;
     top: 70px;
     height: 60px;
@@ -217,10 +326,141 @@
     width: 60px;
   }
 }
+
+@keyframes ball {
+  0% {
+    left: 100px;
+    top: 50px;
+    height: 60px;
+    width: 60px;
+  }
+  4% {
+    left: 100px;
+    top: 170px;
+    height: 50px;
+    width: 63px;
+  }
+  10% {
+    left: 180px;
+    top: 70px;
+    height: 60px;
+    width: 60px;
+  }
+  14% {
+    left: 260px;
+    top: 143px;
+    height: 50px;
+    width: 63px;
+  }
+  20% {
+    left: 335px;
+    top: 50px;
+    height: 60px;
+    width: 60px;
+  }
+  24% {
+    left: 420px;
+    top: 112px;
+    height: 50px;
+    width: 63px;
+  }
+  30% {
+    left: 500px;
+    top: 30px;
+    height: 60px;
+    width: 60px;
+  }
+  34% {
+    left: 580px;
+    top: 80px;
+    height: 50px;
+    width: 63px;
+  }
+  40% {
+    left: 660px;
+    top: 5px;
+    height: 60px;
+    width: 60px;
+  }
+  44% {
+    left: 740px;
+    top: 62px;
+    height: 50px;
+    width: 63px;
+  }
+  50% {
+    left: 740px;
+    top: 5px;
+    height: 60px;
+    width: 60px;
+  }
+  55% {
+    left: 740px;
+    top: 470px;
+    height: 50px;
+    width: 63px;
+  }
+  61% {
+    left: 660px;
+    top: 370px;
+    height: 60px;
+    width: 60px;
+  }
+  65% {
+    left: 580px;
+    top: 444px;
+    height: 50px;
+    width: 63px;
+  }
+  71% {
+    left: 500px;
+    top: 350px;
+    height: 60px;
+    width: 60px;
+  }
+  75% {
+    left: 420px;
+    top: 412px;
+    height: 50px;
+    width: 63px;
+  }
+  81% {
+    left: 335px;
+    top: 320px;
+    height: 60px;
+    width: 60px;
+  }
+  85% {
+    left: 260px;
+    top: 380px;
+    height: 50px;
+    width: 63px;
+  }
+  91% {
+    left: 180px;
+    top: 300px;
+    height: 60px;
+    width: 60px;
+  }
+  95% {
+    left: 100px;
+    top: 363px;
+    height: 50px;
+    width: 63px;
+  }
+  100% {
+    left: 100px;
+    top: 50px;
+    height: 60px;
+    width: 60px;
+  }
+}
+
 body {
   background-color: khaki;
   height: 100%;
 }
+
 .wrapper {
   width: 800px;
   height: 600px;
@@ -229,57 +469,64 @@ body {
   position: relative;
   padding: 50px;
 }
+
 .stairs {
   width: 750px;
   margin: 0px auto;
   position: relative;
 }
+
 .steps {
   width: 100px;
-  border: 3px solid rgb(107, 107, 107);
+  border: 3px solid #6b6b6b;
   text-align: center;
 }
+
 .step1 {
   position: absolute;
-  top: 167px;
+  top: 168px;
   left: 0px;
   height: 52px;
-  animation: step1 0.8s ease 0.3s forwards,
-             step11 0.5s ease 7.7s forwards;
+  -webkit-animation: step1 0.8s ease 0.3s forwards, step11 0.5s ease 7.6s forwards;
+          animation: step1 0.8s ease 0.3s forwards, step11 0.5s ease 7.6s forwards;
 }
+
 .step2 {
   position: absolute;
-  top: 140px;
+  top: 142px;
   left: 162px;
   height: 79px;
-  animation: step2 0.8s ease 1.12s forwards,
-             step21 0.8s ease 6.9s forwards;
-  
+  -webkit-animation: step2 0.8s ease 1.12s forwards, step21 0.8s ease 6.9s forwards;
+          animation: step2 0.8s ease 1.12s forwards, step21 0.8s ease 6.9s forwards;
 }
+
 .step3 {
   position: absolute;
-  top: 108px;
+  top: 111px;
   left: 324px;
   height: 111px;
-  animation: step3 0.8s ease 1.92s forwards,
-             step31 0.8s ease 6.1s forwards;
+  -webkit-animation: step3 0.8s ease 1.92s forwards, step31 0.8s ease 6.1s forwards;
+          animation: step3 0.8s ease 1.92s forwards, step31 0.8s ease 6.1s forwards;
 }
+
 .step4 {
   position: absolute;
-  top: 76px;
+  top: 79px;
   left: 486px;
   height: 143px;
-  animation: step4 0.8s ease 2.72s forwards,
-             step41 0.8s ease 5.28s forwards;
+  -webkit-animation: step4 0.8s ease 2.72s forwards, step41 0.8s ease 5.28s forwards;
+          animation: step4 0.8s ease 2.72s forwards, step41 0.8s ease 5.28s forwards;
 }
+
 .step5 {
   position: absolute;
-  top: 58px;
+  top: 61px;
   right: 0px;
   height: 160px;
-  animation: step5 0.8s ease 3.52s forwards,
-             step51 0.8s ease 4.48s forwards;
+  -webkit-animation: step5 0.8s ease 3.52s forwards, step51 0.8s ease 4.48s forwards;
+          animation: step5 0.8s ease 3.52s forwards, step51 0.8s ease 4.48s forwards;
 }
+
 .ball {
   width: 60px;
   height: 60px;
@@ -288,6 +535,8 @@ body {
   position: absolute;
   left: 100px;
   top: 50px;
-  animation: ball 8s ease;
+  -webkit-animation: ball 8s ease;
+          animation: ball 8s ease;
   z-index: 1;
 }
+/*# sourceMappingURL=main.css.map */
