--- a/homework/2020-11-07/styles/main.scss
+++ b/homework/2020-11-07/styles/main.scss
@@ -1,92 +1,103 @@
-
 @keyframes step11 {
     0% {
-      top: 362px;
+      top: 168px;
+      height: 52px; 
+    }
+    12% {
+        top: 362px;
+        height: 160px;  
+    }
+    91% {
+        top: 362px;
+        height: 160px;  
     }
     100% {
       top: 167px;
       height: 52px;
     }
   }
-  @keyframes step21 {
+@keyframes step21 {
     0% {
-      top: 380px;
+        top: 142px;
+        height: 79px;
+    }
+    12% {
+        top: 380px;
+        height: 143px; 
+    }
+    72% {
+        top: 380px;
+        height: 143px; 
+    }
+    84% {
+        top: 142px;
+        height: 79px;
     }
     100% {
-      top: 140px;
-      height: 79px;;
+        top: 142px;
+        height: 79px;
     }
   }
-  @keyframes step31 {
+@keyframes step31 {
     0% {
-      top: 410px;
+        top: 111px;
+        height: 111px;
+    }
+    12% {
+        top: 410px;
+        height: 111px;
+    }
+    52% {
+        top: 410px;
+        height: 111px;
+    }
+    64% {
+        top: 111px;
+        height: 111px;
     }
     100% {
-      top: 108px;
-      height: 111px;
+        top: 111px;
+        height: 111px;
     }
   }
   @keyframes step41 {
     0% {
-      top: 442px;
+        top: 79px;
+        height: 143px;
+    }
+    12% {
+        top: 442px;
+        height: 79px;
+    }
+    32% {
+        top: 442px;
+        height: 79px;
+    }
+    44% {
+        top: 79px;
+        height: 143px;
     }
     100% {
-      top: 76px;
-      height: 143px;
+        top: 79px;
+        height: 143px;
     }
   }
   @keyframes step51 {
     0% {
-      top: 470px;
+        top: 61px;
+        height: 160px;
     }
+    12% {
+        top: 470px;
+        height: 52px;
+    }
+    22% {
+        top: 61px;
+        height: 160px;
+        }
     100% {
-      top: 58px;
-      height: 160px;
-    }
-  }
-  @keyframes step1 {
-    0% {
-      top: 167px;
-    }
-    100% {
-      top: 362px;
-      height: 160px;
-    }
-  }
-  @keyframes step2 {
-    0% {
-      top: 140px;
-    }
-    100% {
-      top: 380px;
-      height: 143px;;
-    }
-  }
-  @keyframes step3 {
-    0% {
-      top: 108px;
-    }
-    100% {
-      top: 410px;
-      height: 111px;
-    }
-  }
-  @keyframes step4 {
-    0% {
-      top: 76px;
-    }
-    100% {
-      top: 442px;
-      height: 79px;
-    }
-  }
-  @keyframes step5 {
-    0% {
-      top: 58px;
-    }
-    100% {
-      top: 470px;
-      height: 52px;
+        top: 61px;
+        height: 160px;
     }
   }
   @keyframes ball {
@@ -244,41 +255,35 @@
     top: 168px;
     left: 0px;
     height: 52px;
-    animation: step1 0.8s ease 0.3s forwards,
-               step11 0.5s ease 7.6s forwards;
+    animation: step11 8s ease 0.3s infinite forwards;
   }
   .step2 {
     position: absolute;
     top: 142px;
     left: 162px;
     height: 79px;
-    animation: step2 0.8s ease 1.12s forwards,
-               step21 0.8s ease 6.9s forwards;
-    
+    animation: step21 8s ease 1.12s infinite forwards;
   }
   .step3 {
     position: absolute;
     top: 111px;
     left: 324px;
     height: 111px;
-    animation: step3 0.8s ease 1.92s forwards,
-               step31 0.8s ease 6.1s forwards;
+    animation: step31 8s ease 1.92s infinite forwards;
   }
   .step4 {
     position: absolute;
     top: 79px;
     left: 486px;
     height: 143px;
-    animation: step4 0.8s ease 2.72s forwards,
-               step41 0.8s ease 5.28s forwards;
+    animation: step41 8s ease 2.72s infinite forwards;
   }
   .step5 {
     position: absolute;
     top: 61px;
     right: 0px;
     height: 160px;
-    animation: step5 0.8s ease 3.52s forwards,
-               step51 0.8s ease 4.48s forwards;
+    animation: step51 8s ease 3.52s infinite forwards;
   }
   .ball {
     width: 60px;
@@ -288,6 +293,6 @@
     position: absolute;
     left: 100px;
     top: 50px;
-    animation: ball 8s ease;
+    animation: ball 8s ease infinite;
     z-index: 1;
   }
