--- a/homework/2020-11-09 - Copy/styles/main.css
+++ b/homework/2020-11-09 - Copy/styles/main.css
@@ -1,11 +1,15 @@
-$side_measure: 110px;
-/* $row_count: 5;
-$column_count: 5; */
 body {
-    height: 100vh;
-    width: 100vw;
+  height: 100vh;
+  width: 100vw;
 }
+
 .wrapper {
+  shape-outside: inset(50px 50px 50px 50px);
+  -webkit-clip-path: inset(50px 50px 50px 50px);
+          clip-path: inset(50px 50px 50px 50px);
+}
+
+/* .wrapper {
     width: 100%;
     height: 100%;
     background-color: azure;
@@ -13,6 +17,7 @@ body {
     flex-direction: column;
     justify-content: center;
 }
+
 .row {
     margin: 0px auto;
     min-width: 700px;
@@ -21,12 +26,11 @@ body {
     background-color: cadetblue;
     display: flex;
     justify-content: space-around;
-    align-items: center;
-
-    & > .item {
-        height: $side_measure;
-        width: $side_measure;
-        border: 3px solid white;
-    }
+    align-items: center;  
 }
-
+.item {
+    height: $side_measure;
+    width: $side_measure;
+    border: 3px solid white;
+} */
+/*# sourceMappingURL=main.css.map */
