--- a/homework/2020-11-09/styles/main.css
+++ b/homework/2020-11-09/styles/main.css
@@ -1,3 +1,5 @@
+/* $row_count: 5;
+$column_count: 5; */
 body {
   height: 100vh;
   width: 100vw;
@@ -36,7 +38,7 @@ body {
           align-items: center;
 }
 
-.item {
+.row > .item {
   height: 110px;
   width: 110px;
   border: 3px solid white;
