--- a/homework/2020-11-09(3)/styles/main.css
+++ b/homework/2020-11-09(3)/styles/main.css
@@ -37,288 +37,800 @@ body {
 .main-1 .wrapper-1 {
   border-right: 20px solid white;
   border-bottom: 20px solid white;
-  width: 70px;
-  height: 70px;
+  width: 50px;
+  height: 50px;
   background-image: url(../images/S1.png);
 }
 
 .main-1 .wrapper-2 {
   border-right: 20px solid white;
   border-bottom: 20px solid white;
-  width: 70px;
-  height: 70px;
+  width: 50px;
+  height: 50px;
   background-image: url(../images/S1.png);
 }
 
 .main-1 .wrapper-3 {
   border-right: 20px solid white;
   border-bottom: 20px solid white;
-  width: 70px;
-  height: 70px;
+  width: 50px;
+  height: 50px;
   background-image: url(../images/S1.png);
 }
 
 .main-1 .wrapper-4 {
   border-right: 20px solid white;
   border-bottom: 20px solid white;
-  width: 70px;
-  height: 70px;
+  width: 50px;
+  height: 50px;
   background-image: url(../images/S1.png);
 }
 
 .main-1 .wrapper-5 {
   border-right: 20px solid white;
   border-bottom: 20px solid white;
-  width: 70px;
-  height: 70px;
+  width: 50px;
+  height: 50px;
   background-image: url(../images/S1.png);
 }
 
 .main-1 .wrapper-6 {
   border-right: 20px solid white;
   border-bottom: 20px solid white;
-  width: 70px;
-  height: 70px;
+  width: 50px;
+  height: 50px;
+  background-image: url(../images/S1.png);
+}
+
+.main-1 .wrapper-7 {
+  border-right: 20px solid white;
+  border-bottom: 20px solid white;
+  width: 50px;
+  height: 50px;
+  background-image: url(../images/S1.png);
+}
+
+.main-1 .wrapper-8 {
+  border-right: 20px solid white;
+  border-bottom: 20px solid white;
+  width: 50px;
+  height: 50px;
+  background-image: url(../images/S1.png);
+}
+
+.main-1 .wrapper-9 {
+  border-right: 20px solid white;
+  border-bottom: 20px solid white;
+  width: 50px;
+  height: 50px;
+  background-image: url(../images/S1.png);
+}
+
+.main-1 .wrapper-10 {
+  border-right: 20px solid white;
+  border-bottom: 20px solid white;
+  width: 50px;
+  height: 50px;
   background-image: url(../images/S1.png);
 }
 
 .main-2 .wrapper-1 {
   border-right: 20px solid white;
   border-bottom: 20px solid white;
-  width: 70px;
-  height: 70px;
+  width: 50px;
+  height: 50px;
   background-image: url(../images/S1.png);
 }
 
 .main-2 .wrapper-2 {
   border-right: 20px solid white;
   border-bottom: 20px solid white;
-  width: 70px;
-  height: 70px;
+  width: 50px;
+  height: 50px;
   background-image: url(../images/S1.png);
 }
 
 .main-2 .wrapper-3 {
   border-right: 20px solid white;
   border-bottom: 20px solid white;
-  width: 70px;
-  height: 70px;
+  width: 50px;
+  height: 50px;
   background-image: url(../images/S1.png);
 }
 
 .main-2 .wrapper-4 {
   border-right: 20px solid white;
   border-bottom: 20px solid white;
-  width: 70px;
-  height: 70px;
+  width: 50px;
+  height: 50px;
   background-image: url(../images/S1.png);
 }
 
 .main-2 .wrapper-5 {
   border-right: 20px solid white;
   border-bottom: 20px solid white;
-  width: 70px;
-  height: 70px;
+  width: 50px;
+  height: 50px;
   background-image: url(../images/S1.png);
 }
 
 .main-2 .wrapper-6 {
   border-right: 20px solid white;
   border-bottom: 20px solid white;
-  width: 70px;
-  height: 70px;
+  width: 50px;
+  height: 50px;
+  background-image: url(../images/S1.png);
+}
+
+.main-2 .wrapper-7 {
+  border-right: 20px solid white;
+  border-bottom: 20px solid white;
+  width: 50px;
+  height: 50px;
+  background-image: url(../images/S1.png);
+}
+
+.main-2 .wrapper-8 {
+  border-right: 20px solid white;
+  border-bottom: 20px solid white;
+  width: 50px;
+  height: 50px;
+  background-image: url(../images/S1.png);
+}
+
+.main-2 .wrapper-9 {
+  border-right: 20px solid white;
+  border-bottom: 20px solid white;
+  width: 50px;
+  height: 50px;
+  background-image: url(../images/S1.png);
+}
+
+.main-2 .wrapper-10 {
+  border-right: 20px solid white;
+  border-bottom: 20px solid white;
+  width: 50px;
+  height: 50px;
   background-image: url(../images/S1.png);
 }
 
 .main-3 .wrapper-1 {
   border-right: 20px solid white;
   border-bottom: 20px solid white;
-  width: 70px;
-  height: 70px;
+  width: 50px;
+  height: 50px;
   background-image: url(../images/S1.png);
 }
 
 .main-3 .wrapper-2 {
   border-right: 20px solid white;
   border-bottom: 20px solid white;
-  width: 70px;
-  height: 70px;
+  width: 50px;
+  height: 50px;
   background-image: url(../images/S1.png);
 }
 
 .main-3 .wrapper-3 {
   border-right: 20px solid white;
   border-bottom: 20px solid white;
-  width: 70px;
-  height: 70px;
+  width: 50px;
+  height: 50px;
   background-image: url(../images/S1.png);
 }
 
 .main-3 .wrapper-4 {
   border-right: 20px solid white;
   border-bottom: 20px solid white;
-  width: 70px;
-  height: 70px;
+  width: 50px;
+  height: 50px;
   background-image: url(../images/S1.png);
 }
 
 .main-3 .wrapper-5 {
   border-right: 20px solid white;
   border-bottom: 20px solid white;
-  width: 70px;
-  height: 70px;
+  width: 50px;
+  height: 50px;
   background-image: url(../images/S1.png);
 }
 
 .main-3 .wrapper-6 {
   border-right: 20px solid white;
   border-bottom: 20px solid white;
-  width: 70px;
-  height: 70px;
+  width: 50px;
+  height: 50px;
+  background-image: url(../images/S1.png);
+}
+
+.main-3 .wrapper-7 {
+  border-right: 20px solid white;
+  border-bottom: 20px solid white;
+  width: 50px;
+  height: 50px;
+  background-image: url(../images/S1.png);
+}
+
+.main-3 .wrapper-8 {
+  border-right: 20px solid white;
+  border-bottom: 20px solid white;
+  width: 50px;
+  height: 50px;
+  background-image: url(../images/S1.png);
+}
+
+.main-3 .wrapper-9 {
+  border-right: 20px solid white;
+  border-bottom: 20px solid white;
+  width: 50px;
+  height: 50px;
+  background-image: url(../images/S1.png);
+}
+
+.main-3 .wrapper-10 {
+  border-right: 20px solid white;
+  border-bottom: 20px solid white;
+  width: 50px;
+  height: 50px;
   background-image: url(../images/S1.png);
 }
 
 .main-4 .wrapper-1 {
   border-right: 20px solid white;
   border-bottom: 20px solid white;
-  width: 70px;
-  height: 70px;
+  width: 50px;
+  height: 50px;
   background-image: url(../images/S1.png);
 }
 
 .main-4 .wrapper-2 {
   border-right: 20px solid white;
   border-bottom: 20px solid white;
-  width: 70px;
-  height: 70px;
+  width: 50px;
+  height: 50px;
   background-image: url(../images/S1.png);
 }
 
 .main-4 .wrapper-3 {
   border-right: 20px solid white;
   border-bottom: 20px solid white;
-  width: 70px;
-  height: 70px;
+  width: 50px;
+  height: 50px;
   background-image: url(../images/S1.png);
 }
 
 .main-4 .wrapper-4 {
   border-right: 20px solid white;
   border-bottom: 20px solid white;
-  width: 70px;
-  height: 70px;
+  width: 50px;
+  height: 50px;
   background-image: url(../images/S1.png);
 }
 
 .main-4 .wrapper-5 {
   border-right: 20px solid white;
   border-bottom: 20px solid white;
-  width: 70px;
-  height: 70px;
+  width: 50px;
+  height: 50px;
   background-image: url(../images/S1.png);
 }
 
 .main-4 .wrapper-6 {
   border-right: 20px solid white;
   border-bottom: 20px solid white;
-  width: 70px;
-  height: 70px;
+  width: 50px;
+  height: 50px;
+  background-image: url(../images/S1.png);
+}
+
+.main-4 .wrapper-7 {
+  border-right: 20px solid white;
+  border-bottom: 20px solid white;
+  width: 50px;
+  height: 50px;
+  background-image: url(../images/S1.png);
+}
+
+.main-4 .wrapper-8 {
+  border-right: 20px solid white;
+  border-bottom: 20px solid white;
+  width: 50px;
+  height: 50px;
+  background-image: url(../images/S1.png);
+}
+
+.main-4 .wrapper-9 {
+  border-right: 20px solid white;
+  border-bottom: 20px solid white;
+  width: 50px;
+  height: 50px;
+  background-image: url(../images/S1.png);
+}
+
+.main-4 .wrapper-10 {
+  border-right: 20px solid white;
+  border-bottom: 20px solid white;
+  width: 50px;
+  height: 50px;
   background-image: url(../images/S1.png);
 }
 
 .main-5 .wrapper-1 {
   border-right: 20px solid white;
   border-bottom: 20px solid white;
-  width: 70px;
-  height: 70px;
+  width: 50px;
+  height: 50px;
   background-image: url(../images/S1.png);
 }
 
 .main-5 .wrapper-2 {
   border-right: 20px solid white;
   border-bottom: 20px solid white;
-  width: 70px;
-  height: 70px;
+  width: 50px;
+  height: 50px;
   background-image: url(../images/S1.png);
 }
 
 .main-5 .wrapper-3 {
   border-right: 20px solid white;
   border-bottom: 20px solid white;
-  width: 70px;
-  height: 70px;
+  width: 50px;
+  height: 50px;
   background-image: url(../images/S1.png);
 }
 
 .main-5 .wrapper-4 {
   border-right: 20px solid white;
   border-bottom: 20px solid white;
-  width: 70px;
-  height: 70px;
+  width: 50px;
+  height: 50px;
   background-image: url(../images/S1.png);
 }
 
 .main-5 .wrapper-5 {
   border-right: 20px solid white;
   border-bottom: 20px solid white;
-  width: 70px;
-  height: 70px;
+  width: 50px;
+  height: 50px;
   background-image: url(../images/S1.png);
 }
 
 .main-5 .wrapper-6 {
   border-right: 20px solid white;
   border-bottom: 20px solid white;
-  width: 70px;
-  height: 70px;
+  width: 50px;
+  height: 50px;
+  background-image: url(../images/S1.png);
+}
+
+.main-5 .wrapper-7 {
+  border-right: 20px solid white;
+  border-bottom: 20px solid white;
+  width: 50px;
+  height: 50px;
+  background-image: url(../images/S1.png);
+}
+
+.main-5 .wrapper-8 {
+  border-right: 20px solid white;
+  border-bottom: 20px solid white;
+  width: 50px;
+  height: 50px;
+  background-image: url(../images/S1.png);
+}
+
+.main-5 .wrapper-9 {
+  border-right: 20px solid white;
+  border-bottom: 20px solid white;
+  width: 50px;
+  height: 50px;
+  background-image: url(../images/S1.png);
+}
+
+.main-5 .wrapper-10 {
+  border-right: 20px solid white;
+  border-bottom: 20px solid white;
+  width: 50px;
+  height: 50px;
   background-image: url(../images/S1.png);
 }
 
 .main-6 .wrapper-1 {
   border-right: 20px solid white;
   border-bottom: 20px solid white;
-  width: 70px;
-  height: 70px;
+  width: 50px;
+  height: 50px;
   background-image: url(../images/S1.png);
 }
 
 .main-6 .wrapper-2 {
   border-right: 20px solid white;
   border-bottom: 20px solid white;
-  width: 70px;
-  height: 70px;
+  width: 50px;
+  height: 50px;
   background-image: url(../images/S1.png);
 }
 
 .main-6 .wrapper-3 {
   border-right: 20px solid white;
   border-bottom: 20px solid white;
-  width: 70px;
-  height: 70px;
+  width: 50px;
+  height: 50px;
   background-image: url(../images/S1.png);
 }
 
 .main-6 .wrapper-4 {
   border-right: 20px solid white;
   border-bottom: 20px solid white;
-  width: 70px;
-  height: 70px;
+  width: 50px;
+  height: 50px;
   background-image: url(../images/S1.png);
 }
 
 .main-6 .wrapper-5 {
   border-right: 20px solid white;
   border-bottom: 20px solid white;
-  width: 70px;
-  height: 70px;
+  width: 50px;
+  height: 50px;
   background-image: url(../images/S1.png);
 }
 
 .main-6 .wrapper-6 {
   border-right: 20px solid white;
   border-bottom: 20px solid white;
-  width: 70px;
-  height: 70px;
+  width: 50px;
+  height: 50px;
+  background-image: url(../images/S1.png);
+}
+
+.main-6 .wrapper-7 {
+  border-right: 20px solid white;
+  border-bottom: 20px solid white;
+  width: 50px;
+  height: 50px;
+  background-image: url(../images/S1.png);
+}
+
+.main-6 .wrapper-8 {
+  border-right: 20px solid white;
+  border-bottom: 20px solid white;
+  width: 50px;
+  height: 50px;
+  background-image: url(../images/S1.png);
+}
+
+.main-6 .wrapper-9 {
+  border-right: 20px solid white;
+  border-bottom: 20px solid white;
+  width: 50px;
+  height: 50px;
+  background-image: url(../images/S1.png);
+}
+
+.main-6 .wrapper-10 {
+  border-right: 20px solid white;
+  border-bottom: 20px solid white;
+  width: 50px;
+  height: 50px;
+  background-image: url(../images/S1.png);
+}
+
+.main-7 .wrapper-1 {
+  border-right: 20px solid white;
+  border-bottom: 20px solid white;
+  width: 50px;
+  height: 50px;
+  background-image: url(../images/S1.png);
+}
+
+.main-7 .wrapper-2 {
+  border-right: 20px solid white;
+  border-bottom: 20px solid white;
+  width: 50px;
+  height: 50px;
+  background-image: url(../images/S1.png);
+}
+
+.main-7 .wrapper-3 {
+  border-right: 20px solid white;
+  border-bottom: 20px solid white;
+  width: 50px;
+  height: 50px;
+  background-image: url(../images/S1.png);
+}
+
+.main-7 .wrapper-4 {
+  border-right: 20px solid white;
+  border-bottom: 20px solid white;
+  width: 50px;
+  height: 50px;
+  background-image: url(../images/S1.png);
+}
+
+.main-7 .wrapper-5 {
+  border-right: 20px solid white;
+  border-bottom: 20px solid white;
+  width: 50px;
+  height: 50px;
+  background-image: url(../images/S1.png);
+}
+
+.main-7 .wrapper-6 {
+  border-right: 20px solid white;
+  border-bottom: 20px solid white;
+  width: 50px;
+  height: 50px;
+  background-image: url(../images/S1.png);
+}
+
+.main-7 .wrapper-7 {
+  border-right: 20px solid white;
+  border-bottom: 20px solid white;
+  width: 50px;
+  height: 50px;
+  background-image: url(../images/S1.png);
+}
+
+.main-7 .wrapper-8 {
+  border-right: 20px solid white;
+  border-bottom: 20px solid white;
+  width: 50px;
+  height: 50px;
+  background-image: url(../images/S1.png);
+}
+
+.main-7 .wrapper-9 {
+  border-right: 20px solid white;
+  border-bottom: 20px solid white;
+  width: 50px;
+  height: 50px;
+  background-image: url(../images/S1.png);
+}
+
+.main-7 .wrapper-10 {
+  border-right: 20px solid white;
+  border-bottom: 20px solid white;
+  width: 50px;
+  height: 50px;
+  background-image: url(../images/S1.png);
+}
+
+.main-8 .wrapper-1 {
+  border-right: 20px solid white;
+  border-bottom: 20px solid white;
+  width: 50px;
+  height: 50px;
+  background-image: url(../images/S1.png);
+}
+
+.main-8 .wrapper-2 {
+  border-right: 20px solid white;
+  border-bottom: 20px solid white;
+  width: 50px;
+  height: 50px;
+  background-image: url(../images/S1.png);
+}
+
+.main-8 .wrapper-3 {
+  border-right: 20px solid white;
+  border-bottom: 20px solid white;
+  width: 50px;
+  height: 50px;
+  background-image: url(../images/S1.png);
+}
+
+.main-8 .wrapper-4 {
+  border-right: 20px solid white;
+  border-bottom: 20px solid white;
+  width: 50px;
+  height: 50px;
+  background-image: url(../images/S1.png);
+}
+
+.main-8 .wrapper-5 {
+  border-right: 20px solid white;
+  border-bottom: 20px solid white;
+  width: 50px;
+  height: 50px;
+  background-image: url(../images/S1.png);
+}
+
+.main-8 .wrapper-6 {
+  border-right: 20px solid white;
+  border-bottom: 20px solid white;
+  width: 50px;
+  height: 50px;
+  background-image: url(../images/S1.png);
+}
+
+.main-8 .wrapper-7 {
+  border-right: 20px solid white;
+  border-bottom: 20px solid white;
+  width: 50px;
+  height: 50px;
+  background-image: url(../images/S1.png);
+}
+
+.main-8 .wrapper-8 {
+  border-right: 20px solid white;
+  border-bottom: 20px solid white;
+  width: 50px;
+  height: 50px;
+  background-image: url(../images/S1.png);
+}
+
+.main-8 .wrapper-9 {
+  border-right: 20px solid white;
+  border-bottom: 20px solid white;
+  width: 50px;
+  height: 50px;
+  background-image: url(../images/S1.png);
+}
+
+.main-8 .wrapper-10 {
+  border-right: 20px solid white;
+  border-bottom: 20px solid white;
+  width: 50px;
+  height: 50px;
+  background-image: url(../images/S1.png);
+}
+
+.main-9 .wrapper-1 {
+  border-right: 20px solid white;
+  border-bottom: 20px solid white;
+  width: 50px;
+  height: 50px;
+  background-image: url(../images/S1.png);
+}
+
+.main-9 .wrapper-2 {
+  border-right: 20px solid white;
+  border-bottom: 20px solid white;
+  width: 50px;
+  height: 50px;
+  background-image: url(../images/S1.png);
+}
+
+.main-9 .wrapper-3 {
+  border-right: 20px solid white;
+  border-bottom: 20px solid white;
+  width: 50px;
+  height: 50px;
+  background-image: url(../images/S1.png);
+}
+
+.main-9 .wrapper-4 {
+  border-right: 20px solid white;
+  border-bottom: 20px solid white;
+  width: 50px;
+  height: 50px;
+  background-image: url(../images/S1.png);
+}
+
+.main-9 .wrapper-5 {
+  border-right: 20px solid white;
+  border-bottom: 20px solid white;
+  width: 50px;
+  height: 50px;
+  background-image: url(../images/S1.png);
+}
+
+.main-9 .wrapper-6 {
+  border-right: 20px solid white;
+  border-bottom: 20px solid white;
+  width: 50px;
+  height: 50px;
+  background-image: url(../images/S1.png);
+}
+
+.main-9 .wrapper-7 {
+  border-right: 20px solid white;
+  border-bottom: 20px solid white;
+  width: 50px;
+  height: 50px;
+  background-image: url(../images/S1.png);
+}
+
+.main-9 .wrapper-8 {
+  border-right: 20px solid white;
+  border-bottom: 20px solid white;
+  width: 50px;
+  height: 50px;
+  background-image: url(../images/S1.png);
+}
+
+.main-9 .wrapper-9 {
+  border-right: 20px solid white;
+  border-bottom: 20px solid white;
+  width: 50px;
+  height: 50px;
+  background-image: url(../images/S1.png);
+}
+
+.main-9 .wrapper-10 {
+  border-right: 20px solid white;
+  border-bottom: 20px solid white;
+  width: 50px;
+  height: 50px;
+  background-image: url(../images/S1.png);
+}
+
+.main-10 .wrapper-1 {
+  border-right: 20px solid white;
+  border-bottom: 20px solid white;
+  width: 50px;
+  height: 50px;
+  background-image: url(../images/S1.png);
+}
+
+.main-10 .wrapper-2 {
+  border-right: 20px solid white;
+  border-bottom: 20px solid white;
+  width: 50px;
+  height: 50px;
+  background-image: url(../images/S1.png);
+}
+
+.main-10 .wrapper-3 {
+  border-right: 20px solid white;
+  border-bottom: 20px solid white;
+  width: 50px;
+  height: 50px;
+  background-image: url(../images/S1.png);
+}
+
+.main-10 .wrapper-4 {
+  border-right: 20px solid white;
+  border-bottom: 20px solid white;
+  width: 50px;
+  height: 50px;
+  background-image: url(../images/S1.png);
+}
+
+.main-10 .wrapper-5 {
+  border-right: 20px solid white;
+  border-bottom: 20px solid white;
+  width: 50px;
+  height: 50px;
+  background-image: url(../images/S1.png);
+}
+
+.main-10 .wrapper-6 {
+  border-right: 20px solid white;
+  border-bottom: 20px solid white;
+  width: 50px;
+  height: 50px;
+  background-image: url(../images/S1.png);
+}
+
+.main-10 .wrapper-7 {
+  border-right: 20px solid white;
+  border-bottom: 20px solid white;
+  width: 50px;
+  height: 50px;
+  background-image: url(../images/S1.png);
+}
+
+.main-10 .wrapper-8 {
+  border-right: 20px solid white;
+  border-bottom: 20px solid white;
+  width: 50px;
+  height: 50px;
+  background-image: url(../images/S1.png);
+}
+
+.main-10 .wrapper-9 {
+  border-right: 20px solid white;
+  border-bottom: 20px solid white;
+  width: 50px;
+  height: 50px;
+  background-image: url(../images/S1.png);
+}
+
+.main-10 .wrapper-10 {
+  border-right: 20px solid white;
+  border-bottom: 20px solid white;
+  width: 50px;
+  height: 50px;
   background-image: url(../images/S1.png);
 }
 /*# sourceMappingURL=main.css.map */
