--- a/homework/2020-11-09(3)/styles/main.css
+++ b/homework/2020-11-09(3)/styles/main.css
@@ -22,7 +22,7 @@ body {
           align-items: center;
 }
 
-.main-1, .main-2, .main-3, .main-4, .main-5, .main-6, .main-7, .main-8, .main-9, .main-10 {
+.general > div {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -32,6 +32,12 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  /*         & > div {
+            border-right: 20px solid white;
+            border-bottom: 20px solid white;
+            width: $side_measure;
+            height: $side_measure;
+            background-image: url(../images/S1.png);  */
 }
 
 .main-1 .wrapper-1 {
@@ -67,46 +73,6 @@ body {
 }
 
 .main-1 .wrapper-5 {
-  border-right: 20px solid white;
-  border-bottom: 20px solid white;
-  width: 50px;
-  height: 50px;
-  background-image: url(../images/S1.png);
-}
-
-.main-1 .wrapper-6 {
-  border-right: 20px solid white;
-  border-bottom: 20px solid white;
-  width: 50px;
-  height: 50px;
-  background-image: url(../images/S1.png);
-}
-
-.main-1 .wrapper-7 {
-  border-right: 20px solid white;
-  border-bottom: 20px solid white;
-  width: 50px;
-  height: 50px;
-  background-image: url(../images/S1.png);
-}
-
-.main-1 .wrapper-8 {
-  border-right: 20px solid white;
-  border-bottom: 20px solid white;
-  width: 50px;
-  height: 50px;
-  background-image: url(../images/S1.png);
-}
-
-.main-1 .wrapper-9 {
-  border-right: 20px solid white;
-  border-bottom: 20px solid white;
-  width: 50px;
-  height: 50px;
-  background-image: url(../images/S1.png);
-}
-
-.main-1 .wrapper-10 {
   border-right: 20px solid white;
   border-bottom: 20px solid white;
   width: 50px;
@@ -154,46 +120,6 @@ body {
   background-image: url(../images/S1.png);
 }
 
-.main-2 .wrapper-6 {
-  border-right: 20px solid white;
-  border-bottom: 20px solid white;
-  width: 50px;
-  height: 50px;
-  background-image: url(../images/S1.png);
-}
-
-.main-2 .wrapper-7 {
-  border-right: 20px solid white;
-  border-bottom: 20px solid white;
-  width: 50px;
-  height: 50px;
-  background-image: url(../images/S1.png);
-}
-
-.main-2 .wrapper-8 {
-  border-right: 20px solid white;
-  border-bottom: 20px solid white;
-  width: 50px;
-  height: 50px;
-  background-image: url(../images/S1.png);
-}
-
-.main-2 .wrapper-9 {
-  border-right: 20px solid white;
-  border-bottom: 20px solid white;
-  width: 50px;
-  height: 50px;
-  background-image: url(../images/S1.png);
-}
-
-.main-2 .wrapper-10 {
-  border-right: 20px solid white;
-  border-bottom: 20px solid white;
-  width: 50px;
-  height: 50px;
-  background-image: url(../images/S1.png);
-}
-
 .main-3 .wrapper-1 {
   border-right: 20px solid white;
   border-bottom: 20px solid white;
@@ -227,46 +153,6 @@ body {
 }
 
 .main-3 .wrapper-5 {
-  border-right: 20px solid white;
-  border-bottom: 20px solid white;
-  width: 50px;
-  height: 50px;
-  background-image: url(../images/S1.png);
-}
-
-.main-3 .wrapper-6 {
-  border-right: 20px solid white;
-  border-bottom: 20px solid white;
-  width: 50px;
-  height: 50px;
-  background-image: url(../images/S1.png);
-}
-
-.main-3 .wrapper-7 {
-  border-right: 20px solid white;
-  border-bottom: 20px solid white;
-  width: 50px;
-  height: 50px;
-  background-image: url(../images/S1.png);
-}
-
-.main-3 .wrapper-8 {
-  border-right: 20px solid white;
-  border-bottom: 20px solid white;
-  width: 50px;
-  height: 50px;
-  background-image: url(../images/S1.png);
-}
-
-.main-3 .wrapper-9 {
-  border-right: 20px solid white;
-  border-bottom: 20px solid white;
-  width: 50px;
-  height: 50px;
-  background-image: url(../images/S1.png);
-}
-
-.main-3 .wrapper-10 {
   border-right: 20px solid white;
   border-bottom: 20px solid white;
   width: 50px;
@@ -314,46 +200,6 @@ body {
   background-image: url(../images/S1.png);
 }
 
-.main-4 .wrapper-6 {
-  border-right: 20px solid white;
-  border-bottom: 20px solid white;
-  width: 50px;
-  height: 50px;
-  background-image: url(../images/S1.png);
-}
-
-.main-4 .wrapper-7 {
-  border-right: 20px solid white;
-  border-bottom: 20px solid white;
-  width: 50px;
-  height: 50px;
-  background-image: url(../images/S1.png);
-}
-
-.main-4 .wrapper-8 {
-  border-right: 20px solid white;
-  border-bottom: 20px solid white;
-  width: 50px;
-  height: 50px;
-  background-image: url(../images/S1.png);
-}
-
-.main-4 .wrapper-9 {
-  border-right: 20px solid white;
-  border-bottom: 20px solid white;
-  width: 50px;
-  height: 50px;
-  background-image: url(../images/S1.png);
-}
-
-.main-4 .wrapper-10 {
-  border-right: 20px solid white;
-  border-bottom: 20px solid white;
-  width: 50px;
-  height: 50px;
-  background-image: url(../images/S1.png);
-}
-
 .main-5 .wrapper-1 {
   border-right: 20px solid white;
   border-bottom: 20px solid white;
@@ -394,46 +240,6 @@ body {
   background-image: url(../images/S1.png);
 }
 
-.main-5 .wrapper-6 {
-  border-right: 20px solid white;
-  border-bottom: 20px solid white;
-  width: 50px;
-  height: 50px;
-  background-image: url(../images/S1.png);
-}
-
-.main-5 .wrapper-7 {
-  border-right: 20px solid white;
-  border-bottom: 20px solid white;
-  width: 50px;
-  height: 50px;
-  background-image: url(../images/S1.png);
-}
-
-.main-5 .wrapper-8 {
-  border-right: 20px solid white;
-  border-bottom: 20px solid white;
-  width: 50px;
-  height: 50px;
-  background-image: url(../images/S1.png);
-}
-
-.main-5 .wrapper-9 {
-  border-right: 20px solid white;
-  border-bottom: 20px solid white;
-  width: 50px;
-  height: 50px;
-  background-image: url(../images/S1.png);
-}
-
-.main-5 .wrapper-10 {
-  border-right: 20px solid white;
-  border-bottom: 20px solid white;
-  width: 50px;
-  height: 50px;
-  background-image: url(../images/S1.png);
-}
-
 .main-6 .wrapper-1 {
   border-right: 20px solid white;
   border-bottom: 20px solid white;
@@ -467,366 +273,6 @@ body {
 }
 
 .main-6 .wrapper-5 {
-  border-right: 20px solid white;
-  border-bottom: 20px solid white;
-  width: 50px;
-  height: 50px;
-  background-image: url(../images/S1.png);
-}
-
-.main-6 .wrapper-6 {
-  border-right: 20px solid white;
-  border-bottom: 20px solid white;
-  width: 50px;
-  height: 50px;
-  background-image: url(../images/S1.png);
-}
-
-.main-6 .wrapper-7 {
-  border-right: 20px solid white;
-  border-bottom: 20px solid white;
-  width: 50px;
-  height: 50px;
-  background-image: url(../images/S1.png);
-}
-
-.main-6 .wrapper-8 {
-  border-right: 20px solid white;
-  border-bottom: 20px solid white;
-  width: 50px;
-  height: 50px;
-  background-image: url(../images/S1.png);
-}
-
-.main-6 .wrapper-9 {
-  border-right: 20px solid white;
-  border-bottom: 20px solid white;
-  width: 50px;
-  height: 50px;
-  background-image: url(../images/S1.png);
-}
-
-.main-6 .wrapper-10 {
-  border-right: 20px solid white;
-  border-bottom: 20px solid white;
-  width: 50px;
-  height: 50px;
-  background-image: url(../images/S1.png);
-}
-
-.main-7 .wrapper-1 {
-  border-right: 20px solid white;
-  border-bottom: 20px solid white;
-  width: 50px;
-  height: 50px;
-  background-image: url(../images/S1.png);
-}
-
-.main-7 .wrapper-2 {
-  border-right: 20px solid white;
-  border-bottom: 20px solid white;
-  width: 50px;
-  height: 50px;
-  background-image: url(../images/S1.png);
-}
-
-.main-7 .wrapper-3 {
-  border-right: 20px solid white;
-  border-bottom: 20px solid white;
-  width: 50px;
-  height: 50px;
-  background-image: url(../images/S1.png);
-}
-
-.main-7 .wrapper-4 {
-  border-right: 20px solid white;
-  border-bottom: 20px solid white;
-  width: 50px;
-  height: 50px;
-  background-image: url(../images/S1.png);
-}
-
-.main-7 .wrapper-5 {
-  border-right: 20px solid white;
-  border-bottom: 20px solid white;
-  width: 50px;
-  height: 50px;
-  background-image: url(../images/S1.png);
-}
-
-.main-7 .wrapper-6 {
-  border-right: 20px solid white;
-  border-bottom: 20px solid white;
-  width: 50px;
-  height: 50px;
-  background-image: url(../images/S1.png);
-}
-
-.main-7 .wrapper-7 {
-  border-right: 20px solid white;
-  border-bottom: 20px solid white;
-  width: 50px;
-  height: 50px;
-  background-image: url(../images/S1.png);
-}
-
-.main-7 .wrapper-8 {
-  border-right: 20px solid white;
-  border-bottom: 20px solid white;
-  width: 50px;
-  height: 50px;
-  background-image: url(../images/S1.png);
-}
-
-.main-7 .wrapper-9 {
-  border-right: 20px solid white;
-  border-bottom: 20px solid white;
-  width: 50px;
-  height: 50px;
-  background-image: url(../images/S1.png);
-}
-
-.main-7 .wrapper-10 {
-  border-right: 20px solid white;
-  border-bottom: 20px solid white;
-  width: 50px;
-  height: 50px;
-  background-image: url(../images/S1.png);
-}
-
-.main-8 .wrapper-1 {
-  border-right: 20px solid white;
-  border-bottom: 20px solid white;
-  width: 50px;
-  height: 50px;
-  background-image: url(../images/S1.png);
-}
-
-.main-8 .wrapper-2 {
-  border-right: 20px solid white;
-  border-bottom: 20px solid white;
-  width: 50px;
-  height: 50px;
-  background-image: url(../images/S1.png);
-}
-
-.main-8 .wrapper-3 {
-  border-right: 20px solid white;
-  border-bottom: 20px solid white;
-  width: 50px;
-  height: 50px;
-  background-image: url(../images/S1.png);
-}
-
-.main-8 .wrapper-4 {
-  border-right: 20px solid white;
-  border-bottom: 20px solid white;
-  width: 50px;
-  height: 50px;
-  background-image: url(../images/S1.png);
-}
-
-.main-8 .wrapper-5 {
-  border-right: 20px solid white;
-  border-bottom: 20px solid white;
-  width: 50px;
-  height: 50px;
-  background-image: url(../images/S1.png);
-}
-
-.main-8 .wrapper-6 {
-  border-right: 20px solid white;
-  border-bottom: 20px solid white;
-  width: 50px;
-  height: 50px;
-  background-image: url(../images/S1.png);
-}
-
-.main-8 .wrapper-7 {
-  border-right: 20px solid white;
-  border-bottom: 20px solid white;
-  width: 50px;
-  height: 50px;
-  background-image: url(../images/S1.png);
-}
-
-.main-8 .wrapper-8 {
-  border-right: 20px solid white;
-  border-bottom: 20px solid white;
-  width: 50px;
-  height: 50px;
-  background-image: url(../images/S1.png);
-}
-
-.main-8 .wrapper-9 {
-  border-right: 20px solid white;
-  border-bottom: 20px solid white;
-  width: 50px;
-  height: 50px;
-  background-image: url(../images/S1.png);
-}
-
-.main-8 .wrapper-10 {
-  border-right: 20px solid white;
-  border-bottom: 20px solid white;
-  width: 50px;
-  height: 50px;
-  background-image: url(../images/S1.png);
-}
-
-.main-9 .wrapper-1 {
-  border-right: 20px solid white;
-  border-bottom: 20px solid white;
-  width: 50px;
-  height: 50px;
-  background-image: url(../images/S1.png);
-}
-
-.main-9 .wrapper-2 {
-  border-right: 20px solid white;
-  border-bottom: 20px solid white;
-  width: 50px;
-  height: 50px;
-  background-image: url(../images/S1.png);
-}
-
-.main-9 .wrapper-3 {
-  border-right: 20px solid white;
-  border-bottom: 20px solid white;
-  width: 50px;
-  height: 50px;
-  background-image: url(../images/S1.png);
-}
-
-.main-9 .wrapper-4 {
-  border-right: 20px solid white;
-  border-bottom: 20px solid white;
-  width: 50px;
-  height: 50px;
-  background-image: url(../images/S1.png);
-}
-
-.main-9 .wrapper-5 {
-  border-right: 20px solid white;
-  border-bottom: 20px solid white;
-  width: 50px;
-  height: 50px;
-  background-image: url(../images/S1.png);
-}
-
-.main-9 .wrapper-6 {
-  border-right: 20px solid white;
-  border-bottom: 20px solid white;
-  width: 50px;
-  height: 50px;
-  background-image: url(../images/S1.png);
-}
-
-.main-9 .wrapper-7 {
-  border-right: 20px solid white;
-  border-bottom: 20px solid white;
-  width: 50px;
-  height: 50px;
-  background-image: url(../images/S1.png);
-}
-
-.main-9 .wrapper-8 {
-  border-right: 20px solid white;
-  border-bottom: 20px solid white;
-  width: 50px;
-  height: 50px;
-  background-image: url(../images/S1.png);
-}
-
-.main-9 .wrapper-9 {
-  border-right: 20px solid white;
-  border-bottom: 20px solid white;
-  width: 50px;
-  height: 50px;
-  background-image: url(../images/S1.png);
-}
-
-.main-9 .wrapper-10 {
-  border-right: 20px solid white;
-  border-bottom: 20px solid white;
-  width: 50px;
-  height: 50px;
-  background-image: url(../images/S1.png);
-}
-
-.main-10 .wrapper-1 {
-  border-right: 20px solid white;
-  border-bottom: 20px solid white;
-  width: 50px;
-  height: 50px;
-  background-image: url(../images/S1.png);
-}
-
-.main-10 .wrapper-2 {
-  border-right: 20px solid white;
-  border-bottom: 20px solid white;
-  width: 50px;
-  height: 50px;
-  background-image: url(../images/S1.png);
-}
-
-.main-10 .wrapper-3 {
-  border-right: 20px solid white;
-  border-bottom: 20px solid white;
-  width: 50px;
-  height: 50px;
-  background-image: url(../images/S1.png);
-}
-
-.main-10 .wrapper-4 {
-  border-right: 20px solid white;
-  border-bottom: 20px solid white;
-  width: 50px;
-  height: 50px;
-  background-image: url(../images/S1.png);
-}
-
-.main-10 .wrapper-5 {
-  border-right: 20px solid white;
-  border-bottom: 20px solid white;
-  width: 50px;
-  height: 50px;
-  background-image: url(../images/S1.png);
-}
-
-.main-10 .wrapper-6 {
-  border-right: 20px solid white;
-  border-bottom: 20px solid white;
-  width: 50px;
-  height: 50px;
-  background-image: url(../images/S1.png);
-}
-
-.main-10 .wrapper-7 {
-  border-right: 20px solid white;
-  border-bottom: 20px solid white;
-  width: 50px;
-  height: 50px;
-  background-image: url(../images/S1.png);
-}
-
-.main-10 .wrapper-8 {
-  border-right: 20px solid white;
-  border-bottom: 20px solid white;
-  width: 50px;
-  height: 50px;
-  background-image: url(../images/S1.png);
-}
-
-.main-10 .wrapper-9 {
-  border-right: 20px solid white;
-  border-bottom: 20px solid white;
-  width: 50px;
-  height: 50px;
-  background-image: url(../images/S1.png);
-}
-
-.main-10 .wrapper-10 {
   border-right: 20px solid white;
   border-bottom: 20px solid white;
   width: 50px;
